--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     </div>
 
     
-<!--     <script src="js/md5.js"></script> 
- -->    <script src="js/script.js"></script>
+    <script src="js/md5.js"></script> 
+    <script src="js/script.js"></script>
     
 </body>
 </html>
