--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     </div>
 
     
-    <script src="js/md5.js"></script> 
+    <script src="js/md5.js"></script>
+    <script src="js/keys.js"></script> 
     <script src="js/script.js"></script>
     
 </body>
