--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     
     <script src="js/md5.js"></script>
-    <script src="js/keys.js"></script> 
+    <script src="js/private.js"></script> 
     <script src="js/script.js"></script>
     
 </body>
