--- a/index.html
+++ b/index.html
@@ -4,15 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Héros de Marvel</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
-    <h1>Héroes de Marvel</h1>
+    <h1>MUNDO MARVEL</h1>
     <div id="contenido">
-
+        
+           <!--  <div class="row">
+                <div class="col-4">
+                    <div class="card h-100">
+                        <a href="#"><img src="" class="card-img-top img-fluid"></a>  
+                        <div class="card-body">
+                            <h3 class="card-title"></h3>
+                            <p class="card-text"></p>
+                        </div>
+                    </div>
+                </div>
+            </div> -->
     </div>
 
-    
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+
     <script src="js/md5.js"></script>
     <script src="js/private.js"></script> 
     <script src="js/script.js"></script>
